[tool.poetry]
name = "stockanalyzer"
version = "0.1.0"
description = "Analisador de cotações com envio de email"
authors = ["Felippe Andrade <4drade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = { extras = ["nospam", "repair"], version = "^0.2.43" }
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.3"
ruff-lsp = "^0.0.55"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
